--- a/src/index.html
+++ b/src/index.html
@@ -172,10 +172,15 @@
             </div>
             <!-- 字幕控制显示组件块 -->
             <div id="controlpad" style="justify-content: space-around;display: flex;height: 35px;align-items: center;position:relative;">
-                <span id="replay" class="unselectable" 
+                <span id="loopVideoBtn" class="unselectable" 
                     style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
                         border: 1px solid #bfbbbb;background-color: #ffffff;border-radius: 3px;">
-                    重播
+                    循环
+                </span>
+                <span id="unloopVideoBtn" class="unselectable" 
+                    style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
+                        border: 1px solid #bfbbbb;background-color: #ffffff;border-radius: 3px;display:none;">
+                    连续
                 </span>
                 <span id="searchbtn" class="unselectable" 
                     style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
