--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,12 @@
         </script>
         <style>
             @media screen and (min-width: 700px) {
-                #video,#summtrans,#wordsframe {
+                #video,#summtrans,#wordsframe,#hints,#videoshasow {
                     height:350px;
                 }
             }
             @media screen and (max-width: 700px) {
-                #video,#summtrans,#wordsframe {
+                #video,#summtrans,#wordsframe,#hints,#videoshasow {
                     height:220px;
                 }
             }
@@ -78,7 +78,7 @@
             </div>
             <!-- 视频块 -->
              <video controls x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video" poster autoplay preload
-                style="background: #000000;display: block;position: relative;top:-1000px;object-fit: cover;">
+                style="background: #000000;display: block;position: relative;top:-1000px;object-fit:cover;">
             </video>
 
             
