--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,12 @@
         </script>
         <style>
             @media screen and (min-width: 700px) {
-                #video,#summtrans,#wordsframe,#hints,#videoshasow,#videobox {
+                #video,#video1,#video2,#summtrans,#wordsframe,#hints,#videoshasow,#videobox {
                     height:350px;
                 }
             }
             @media screen and (max-width: 700px) {
-                #video,#summtrans,#wordsframe,#hints,#videoshasow,#videobox {
+                #video,#video1,#video2,#summtrans,#wordsframe,#hints,#videoshasow,#videobox {
                     height:220px;
                 }
             }
@@ -78,8 +78,15 @@
             </div>
             <!-- 视频块 -->
             <div id="videobox" style="overflow:hidden;position:relative;">
+                
                 <video  x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video" poster autoplay preload
                     style="background: #000000;display: block;position: relative;top:-1000px;object-fit:cover;">
+                </video>
+                <video x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video2" poster
+                    style="background: #000000;display: block;position: absolute;top:0;left:-100%;;object-fit:cover;">
+                </video>
+                <video x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video1" poster
+                    style="background: #000000;display: block;position: absolute;top:0;left:100%;;object-fit:cover;">
                 </video>
                 <div id="chDialog" class="chDialog" 
                     style="position: absolute;bottom: 0;width:100%;min-height:30px;font-size:16px;color:#ffffff;text-align: center;padding:0 5px;
