--- a/src/index.html
+++ b/src/index.html
@@ -158,9 +158,10 @@
                         style="font-size: 16px;font-weight: 900;display: block;width:100%;box-sizing: border-box;border: none;
                             background-color: #eaeaea;border-radius: 1px;line-height: 25px;height: 25px;"/>
                 </form>
-                <div id="wordss" style="font-size:14px;position:absolute;top:30px;bottom:0;left:0;right:0;padding:3px 10px 5px 10px;">
+                <div id="wordss" style="font-size:14px;position:absolute;top:30px;bottom:0;left:0;right:0;padding:5px 10px 5px 10px;">
                     <div id="words"  class="scrollbar1" style="width:100%;height:100%;overflow: auto;">
-                        <div id="wordtempl" class="unselectable" style="overflow:hidden;text-overflow: ellipsis;white-space: nowrap;width:100%;display:none;cursor: pointer;" >
+                        <div id="wordtempl" class="unselectable" style="overflow:hidden;text-overflow: ellipsis;white-space: nowrap;
+                            width:100%;display:none;cursor: pointer;line-height: 20px;" >
                         </div>
                     </div>
                 </div>
